--- a/src/components/features/blog/Blog.module.css
+++ b/src/components/features/blog/Blog.module.css
@@ -44,6 +44,7 @@
 .ckCntWrap img {
     max-width: 100%;
     max-height: 100%;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 640px) {
@@ -124,10 +125,6 @@
         max-width: 50%;
         margin-right: 15px;
         margin-bottom: 15px;
-    }
-
-    .ckCntWrap img:last-of-type {
-        margin-bottom: 0;
     }
 }
 
