--- a/src/components/features/gallery/gallery.css
+++ b/src/components/features/gallery/gallery.css
@@ -1,9 +1,7 @@
 .CardSlider .swiper-button-prev,
-.swiper-button-next {
-  width: 50px;
-  height: 50px;
-  /* background: linear-gradient(135deg, #ff5f6d, #845ec2); */
-  /* Adjust colors if needed */
+.CardSlider .swiper-button-next {
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -15,6 +13,27 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 10;
+}
+@media (min-width: 1280px) {
+  .CardSlider .swiper-button-prev,
+  .CardSlider .swiper-button-next {
+    width: 30px;
+    height: 30px;
+  }
+}
+@media (min-width: 1536px) {
+  .CardSlider .swiper-button-prev,
+  .CardSlider .swiper-button-next {
+    width: 40px;
+    height: 40px;
+  }
+}
+@media (min-width: 1920px) {
+  .CardSlider .swiper-button-prev,
+  .CardSlider .swiper-button-next {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .CardSlider .swiper-button-prev {
@@ -39,11 +58,11 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  background-image: url('/images/next-btn.svg');
+  background-image: url("/images/next-btn.svg");
 }
 
 .CardSlider .swiper-button-prev::after {
-  background-image: url('/images/prev-btn.svg');
+  background-image: url("/images/prev-btn.svg");
 }
 
 @media (min-width: 640px) {
